[package]
name = "sure"
version = "0.1.0"
authors = ["shiplet <shiplet@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
dirs = "3.0.1"
futures = "0.3.12"
regex = "1.4.3"
reqwest = { version = "0.11.0", features = ["json"] }
scraper = "0.12.0"
serde = { version = "1.0.120", features = ["derive"] }
serde_json = "1.0.61"
tokio = { version = "1.1.0", features = ["full"] }
